# ibmmpy

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: Detector.action
ibmmpy/: ibmm.py
launch/: fixation_detector.launch  fixation_visualizer.launch
msg/: FixationData.msg  FixationDataPoint.msg  GazeData.msg  GazeDataPoint.msg
scripts/: fixation_detector.py  fixation_visualizer.py  gaze_data_to_bag.py  validate.py
src/ibmmpy/: controller.py  ibmm.py  ibmm_online.py  test.py
srv/: SaveCalibration.srv
